# laba_1TPO

./: CMakeLists.txt
.github/workflows/: ci.yml
include/: lr1.h
src/: lr1.cpp
tests/: lr1_test.cpp  test_data.json
